# TextCompare

./: .gitignore  README.md  io.github.josephmawa.Compare.json  io.github.josephmawa.TextCompare.json  meson.build  package.json
data/: io.github.josephmawa.Compare.desktop.in  io.github.josephmawa.Compare.gschema.xml  io.github.josephmawa.Compare.metainfo.xml.in  io.github.josephmawa.Compare.service.in  io.github.josephmawa.TextCompare.desktop.in  io.github.josephmawa.TextCompare.gschema.xml  io.github.josephmawa.TextCompare.metainfo.xml.in  io.github.josephmawa.TextCompare.service.in  meson.build
data/icons/: meson.build
po/: LINGUAS  POTFILES.in  TextCompare.pot  es.po  hr.po  it.po  meson.build  nl.po  oc.po  pt_BR.po  ru.po  textcompare.pot  uk.po  zh_CN.po
src/: about.js  application.js  io.github.josephmawa.Compare.data.gresource.xml  io.github.josephmawa.Compare.in  io.github.josephmawa.Compare.src.gresource.xml  io.github.josephmawa.TextCompare.data.gresource.xml  io.github.josephmawa.TextCompare.in  io.github.josephmawa.TextCompare.src.gresource.xml  main.js  meson.build  preferences.js  window.js  window.ui
src/lib/: js-diff.js
src/res/: io.github.josephmawa.TextCompare.data.gresource.xml
src/styles/: index.css
src/ui/: help-overlay.ui  preferences.ui  shortcuts-dialog.ui  window.ui
src/util/: util.js
